flip cards were not working in firefox during testing. front card and back card were visible when hovered over and links not working.  I needed to add backface-visability:hidden to mousein class to solve the problem

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -198,6 +198,9 @@ p {
 .flip-card {
     position: relative;
     -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -o-perspective: 1000;
+    -ms-perspective: 1000;
     perspective: 1000;
 }
 
@@ -205,8 +208,14 @@ p {
 .flip {
     position: relative;
     -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
     transition: all 1s ease;
     -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
     transform-style: preserve-3d;
 }
 
@@ -214,6 +223,14 @@ p {
 .flip.mousein {
     transform: rotateY( 180deg);
     -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
 }
 
 /*the front and back containers */
@@ -221,6 +238,9 @@ p {
     position: absolute;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
 }
 
 /*the front container z index */
@@ -231,6 +251,9 @@ p {
 /*the back container rotated 180 degrees */
 .back {
     -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
     transform: rotateY( 180deg);
 }
 
@@ -419,7 +442,6 @@ p {
     border-radius: 0;
     font-family: 'Didact Gothic', sans-serif;
     text-decoration: none;
-
 }
 
 /* fontawesome facebook glyphicon */
@@ -441,6 +463,7 @@ p {
     text-decoration: none;
     padding:10px;
 }
+
 /************** LANDING PAGE GENERAL ****************************/
 
 /* Landing page containers */
